<?php

class StatutAppro
{
    private int $id;
    private string $nom;
}