@startuml Diagramme_Classe_Cotisation

class Utilisateur {
    - id : int
    - nomComplet : String
    - email : String
    - mot_passe : int
    - adresse : String
    - tel : String
}

class Role {
    - id : int
    - nom : String
}

class Client{
    - id : int
    - nom : string
    - prenom : string
    - email : string
    - tel : string
    - limiteCredit : float
}

class Commande{
    - id : int
    - datCommande : int
    - montantInitial : int
    - avance : float
}


class Dette {
    - id : int
    - montantInitial : float
    - montantRestant : float
    - dateCreation : Date
    - dateEcheance : Date
    - statut : String
}


class LigneCommande{
    - id : int
    - qteCommande : int
    - prixReel : float
}

class ModePaiement{
    - id : int
    - mode : string
}

class Reglement{
    - id : int
    - date : Date
    - montant : float
}

class Produit{
    - id : int
    - libelle : string
    - prixVente : float
    - stockInitial : int
}

class Fournisseur{
    -id : int
    -nom : string
    -email : string
    -tel : string
    -adresse : string
}

class StatutAppro{
    - id : int
    - nom : string
}

class Appro{
    - id : int
    - refBl : string
    - dateAppro : Date
}

class LigneAppro{
    - id : int
    - qteAppro : int
    - qteRecu : int
    - prixReel : float
}



Utilisateur "0..*" --> "1" Role 
Client "1" --> "0..*" Commande 
Commande "1" --> "0..*" LigneCommande 
Produit "1" --> "0..*" LigneCommande 

Appro "0..*" --> "1" Fournisseur 
Appro "1" --> "0..*" LigneAppro 
Produit "1" --> "0..*" LigneAppro 

StatutAppro "1" --> "0..*" Appro 
Commande "0..*" --> "1" ModePaiement 
Reglement "0..*" --> "1" Commande 

Appro "0..*" --> "1" Utilisateur 
Commande "0..*" --> "1" Utilisateur 
Dette "1" --> "0..*" Reglement







@enduml